# cosmospy-protobuf

./: .gitignore  README.md  aggregate.py  compile.py  pyproject.toml
configs/: celestia.json
