[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmospy_protobuf_celestia"
version = "0.5.0"
description = "This package contains a compiled python version of all celestia protobuf files with their dependencies"
authors = [
    { name = "ctrl-felix", email = "dev@ctrl-felix.de" },
    { name = "treenoder", email = "asymptotelian@gmail.com" },
]
readme = "README.md"
keywords = ["cosmospy", "celestia", "proto", "cosmospy-protobuf", "cosmos", "cosmos-protobuf", "protobuf"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "protobuf",
]
dynamic = []

[project.urls]
"Homepage" = "https://github.com/ctrl-Felix/cosmospy-protobuf/"
"Bug Tracker" = "https://github.com/ctrl-Felix/cosmospy-protobuf/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/celestia_proto"]

[dependency-groups]
dev = [
    "gitpython>=3.1.44",
    "grpcio-tools>=1.70.0",
    "grpclib>=0.4.7",
    "protoletariat>=3.3.9",
]
